id^publisherId^createdAt^editedAt^publishedAt^title^content^numOfLikes^numOfDislikes^isPublished
10^1^27/11/2024/21/15/39^27/11/2024/21/15/39^0/0/0/0/0/0^ADTP Hajat Prayer^Let's be with us, guiding everyone into the right$path and make connection among ADTP students.$It is an annual event.$Go grab your chance!!$^2^1^0
11^1^27/11/2024/21/2/2^27/11/2024/21/2/2^0/0/0/0/0/0^Kes Jenazah Terbang^Satu Hari saya nampak ade jenazah terbang atas^0^0^0
12^2^27/11/2024/22/22/14^27/11/2024/22/22/14^0/0/0/0/0/0^KTJ Family Day^Congrats on finishing your exam! Let's release our$tension at Cherating. Don't forget to bring your$swimsuits and goggles XD$^3^0^0
13^2^28/11/2024/0/20/25^28/11/2024/0/20/25^0/0/0/0/0/0^USCS22 EXHIBITION^Meet aspiring developers from AD30 batch! Explore$the virtual world from our C++ project.$^0^0^0
15^1^28/11/2024/7/31/56^28/11/2024/7/31/56^0/0/0/0/0/0^ddadd^ddwadwad$^0^1^0
16^10^28/11/2024/10/42/18^28/11/2024/10/42/18^0/0/0/0/0/0^Anti-Rasuah^Tak baik rasuah ni. Kalau ada orang offer tu,$abstinen la!$^1^0^0
17^10^28/11/2024/10/45/42^28/11/2024/10/45/42^0/0/0/0/0/0^Wordsmith Induction Day^Let's meet up with professional writers like Teme $at Level 3 Intec Library.$Date: 1/12/2024$Time: 10 am$Secure your seat by registering in the link.$https://www.googleforms.abcdefg.com$^0^1^0