@@ -60,17 +60,24 @@ class NewsManager
         false
       });
 
-      std::string url = "https://example.com/audio.mp3";
-
       // Open a pipe to Python script
-      FILE* pythonProcess = popen("python3 ../voices.py", "w");
+      FILE* pythonProcess = popen("python3 voices.py", "w");
       if (!pythonProcess) {
           std::cerr << "Failed to start Python process." << std::endl;
           return 1;
       }
 
+      string p = to_string(nextNewsId) + "$";
+      for (int i = 0; i < content.size(); i++)
+      {
+        if (content[i] == '\n')
+          p += '$';
+        else
+          p += content[i];
+      }
+
       // Send URL to Python script
-      fprintf(pythonProcess, "%s\n", url.c_str());
+      fprintf(pythonProcess, "%s\n", p.c_str());
       fflush(pythonProcess);
 
       // Close the pipe
