@@ -40,7 +40,7 @@ vector<News>* news;             // Stores all news data
 
 Publisher this_pub;
 int PID = 0;   // Publisher ID of current user
-int MENU = ENTRY;  // Current Menu number the user is interacting with
+int MENU = MAIN_MENU;  // Current Menu number the user is interacting with
 
 void entryMenu(),     // Function prototypes for all menus
      signUp(),
